add: testing findAll UserResource controller.